--- a/bmi.css
+++ b/bmi.css
@@ -7,7 +7,7 @@ body{
 
 .content{
   width: 400px;
-  height: 650px;
+  height: 100%;
   margin: 50px auto 0 50px;
   box-sizing: border-box;
   background: url("100932825-background-with-healthy-food-eco-farm-food.jpg") top left repeat;
