--- a/bmi.css
+++ b/bmi.css
@@ -1,5 +1,5 @@
 body{
-
+  height:100%;
   background: #333 url("quinoa-mushrooms-lettuce-red-cabbage-spinach-cucumbers-tomatoes-bowl-buddha-dark-top-view.jpg")  no-repeat;
   background-size: cover;
 
