--- a/bmi.css
+++ b/bmi.css
@@ -1,14 +1,11 @@
 body{
-  height:100%;
-  width: 100%;
-  background: #333 url("quinoa-mushrooms-lettuce-red-cabbage-spinach-cucumbers-tomatoes-bowl-buddha-dark-top-view.jpg") top left  repeat;
-  background-size: cover;
+  background: url(background-photo.jpg) center center cover no-repeat fixed;
 
 }
 
 .content{
-  width: 100%;
-  height: 100%;
+  width: 400px;
+  height: 650px;
   margin: 50px auto 0 50px;
   box-sizing: border-box;
   background: url("100932825-background-with-healthy-food-eco-farm-food.jpg") top left repeat;
