--- a/bmi.css
+++ b/bmi.css
@@ -1,5 +1,5 @@
 body{
-  background: url(background-photo.jpg) center center cover no-repeat fixed;
+  background: url("quinoa-mushrooms-lettuce-red-cabbage-spinach-cucumbers-tomatoes-bowl-buddha-dark-top-view.jpg") center center cover no-repeat fixed;
 
 }
 
