--- a/bmi.css
+++ b/bmi.css
@@ -1,5 +1,5 @@
 body{
-  background: #333 url("quinoa-mushrooms-lettuce-red-cabbage-spinach-cucumbers-tomatoes-bowl-buddha-dark-top-view.jpg") cover no-repeat fixed;
+  background: #333 url("quinoa-mushrooms-lettuce-red-cabbage-spinach-cucumbers-tomatoes-bowl-buddha-dark-top-view.jpg") cover no-repeat ;
 }
 
 .content{
@@ -96,7 +96,7 @@ button:active{
   background-color: white;
   width: 50%;
   margin-left: 25%;
-  margin-bottom: 10px;
+  margin-bottom: 20px;
   border-radius:20px;
   border: solid 3px #222;
   font-size: 50px;
