--- a/bmi.css
+++ b/bmi.css
@@ -6,7 +6,7 @@ body{
 .content{
   width: 400px;
   height: 100%;
-  margin: 50px auto 0 50px;
+  margin: 50px 50px 0 50px;
   box-sizing: border-box;
   background: url("100932825-background-with-healthy-food-eco-farm-food.jpg") top left repeat;
   box-shadow: 0 10px 15px -8px #000;
