--- a/bmi.css
+++ b/bmi.css
@@ -5,8 +5,7 @@ body{
 
 .content{
   width: 400px;
-  height: 700px;
-  padding:20px;
+  height: 100%;
   margin: 50px auto 50px 50px;
   box-sizing: border-box;
   background: url("100932825-background-with-healthy-food-eco-farm-food.jpg") top left repeat;
@@ -96,6 +95,7 @@ button:active{
 
 #bmicalci{
   background-color: white;
+  padding: 20px;
   width: 50%;
   margin-left: 25%;
   margin-bottom: 20px;
