--- a/bmi.css
+++ b/bmi.css
@@ -5,7 +5,7 @@ body{
 
 .content{
   width: 400px;
-  height: 100%;
+  height: 750px;
   margin: 50px auto 0px 50px;
   box-sizing: border-box;
   background: url("100932825-background-with-healthy-food-eco-farm-food.jpg") top left repeat;
